apps/gotify/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotify
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: gotify
